--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,7 @@
 * @Author: Aliennnnnn
 * @Date:   2017-05-06 21:25:34
 * @Last Modified by:   Aliennnnnn
-<<<<<<< HEAD
-* @Last Modified time: 2017-05-08 23:54:44
-=======
-* @Last Modified time: 2017-09-06 23:24:36
->>>>>>> refs/remotes/origin/master
+* @Last Modified time: 2017-09-06 23:32:31
 */
 /*public style*/
 body,
@@ -175,16 +171,6 @@ body
 .clearboth{
     clear: both;
 }
-.icon {
-   width: 1em; height: 1em;
-   vertical-align: -0.15em;
-   fill: currentColor;
-   overflow: hidden;
-   font-size: 95px;
-}
-.clearboth{
-    clear: both;
-}
 #cv
 {
     width: 100%;
@@ -261,20 +247,6 @@ h1
 }
 .skills .skill{
     display: inline-block;
-<<<<<<< HEAD
-	width: 90px;
-	height: 90px;
-	border-radius: 80px;
-	background-color: #4f4454;/*#2d2b2d;*/
-	text-align: center;
-	line-height: 90px;
-    visibility: hidden;
-    transition: .5s ease;
-}
-.skills .skill:hover{
-    width: 100px;
-    height: 100px;
-=======
     width: 90px;
     height: 90px;
     border-radius: 80px;
@@ -287,12 +259,29 @@ h1
 .skills .skill:hover{
     width: 95px;
     height: 95px;
->>>>>>> refs/remotes/origin/master
     border: 5px solid #8e8080;
 }
 .skills .familiar{
     background-color: #575259;
 }
+/*.row-1,.row-2{
+    clear: both;
+}
+.row-1,.row-2,.row-3,.row-4{
+    margin: 10px 8px 0 0;
+}
+.row{
+    width: 1200px;
+    height: 150px;
+    margin: 0 auto;
+    font-weight: 400;
+    margin-top: 70px;
+}
+.row .part-1,.part-2{
+    width: 600px;
+    float: left;
+}*/
+
 .project-wrapper h1{
     position: absolute;
     top:10%;
@@ -336,54 +325,15 @@ h1
 svg{
     margin-top: 10px;
 }
-<<<<<<< HEAD
-.row{
-    width: 1200px;
-    height: 150px;
-    margin: 0 auto;
-    font-weight: 400;
-    margin-top: 70px;
-}
-.row .part-1,.part-2{
-    width: 600px;
-    float: left;
-}
-.col-2{
-    width: 200px;
-    float: left;
-}
-.row .col-2 a{
-    display: inline-block;
-    width: 120px;
-    height: 120px;
-    border-radius: 60px;
-    background-color: #008a75;
-    color:#f1f1f1;
-    transition: .5s ease;
-}
-.row .col-2 a:hover{
-    opacity: 0.6;
-}
-svg{
-    margin-top: 10px;
-}
-.col-4{
-    width: 400px;
-=======
 .col-4{
     width: 400px;
     text-align: left;
->>>>>>> refs/remotes/origin/master
 }
 .col-4 a{
     display: inline-block;   
     height: 50px;
     font-size: 40px;
     color: #008a75;
-<<<<<<< HEAD
-    text-align: left;
-=======
->>>>>>> refs/remotes/origin/master
     transition: .5s ease;
 }
 .col-4 a:hover{
@@ -392,13 +342,7 @@ svg{
 .col-4 p{
     width: 400px;
     color: #aee2d9;
-<<<<<<< HEAD
-    font-size: 20px;  
-    margin: 5px 0 0 30px;
-}
-=======
     color: #fff;
     font-size: 20px;  
     margin: 5px 0 0 0px;
 }
->>>>>>> refs/remotes/origin/master
